--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div class="modalOverlay gen">
         <div class="modalContainer ">
             <h3>modal content</h3>
+            <p>This is how a modal popup works. Firrrrsttt trryyyyyy!!!</p>
             <button class="close">
                 <img src="./images/cancel.png" alt="" class="closeBtn">
             </button>
